css/main.css
@font-face {
    font-family: 'BebasNeue-Regular';
    src: url('../fonts/BebasNeue-Regular.eot');
    src: url('../fonts/BebasNeue-Regular.eot?#iefix') format('embedded-opentype'), url('../fonts/BebasNeue-Regular.svg#BebasNeue-Regular') format('svg'), url('../fonts/BebasNeue-Regular.ttf') format('truetype'), url('../fonts/BebasNeue-Regular.woff') format('woff'), url('../fonts/BebasNeue-Regular.woff2') format('woff2');
    font-weight: normal;
    font-style: normal;
}

body {
    font-family: BebasNeue-Regular;
    margin: 0;
}

/* Style the header */

.header {
    padding: 8px;
    text-align: center;
    background: #f5f5f5;
    color: white;
}

/* Increase the font size of the h1 element */

.header h1 {
    font-size: 90px;
}

/* Style the top navigation bar */

.navbar {
    overflow: hidden;
    background-color: #e9e9e9;
}

/* Style the navigation bar links */

.navbar a {
    float: left;
    display: block;
    color: black;
    text-align: center;
    padding: 5px 20px;
    text-decoration: none;
}

/* Right-aligned link */

.navbar a.right {
    float: right;
}

/* Change color on hover */

.navbar a:hover {
    background-color: #ddd;
    color: black;
}

/* Ensure proper sizing */

* {
    box-sizing: border-box;
}

/* Main column */

.main {
    background-color: #e4e4e4;
    /* White background color */
    padding: 30px;
    /* Some padding */
    font-size: 20px;
    flex: 80%;
    text-align: center;
}

/* Column container */

.row {
    display: flex;
    flex-wrap: wrap;
}

.main>div {
    background-color: #e4e4e4;
    /* White background color */
    padding: 40px;
    /* Some padding */
}

.footer {
    padding: 20px;
    /* Some padding */
    text-align: center;
    /* Center text*/
    background: #d8d8d8;
    /* Grey background */
}

.sidea {
    flex: 10%;
    background-color: #d8d8d8;
}

.sideb {
    flex: 10%;
    background-color: #d8d8d8;
}

.image, main p {
    text-align: center;
}

.icon {
    text-align: center;
    margin-top: 10px;
    margin-bottom: 10px;
    margin-right: 10px;
    margin-left: 10px;
}

.entry {
    text-align: center;
    float: center;
}

@media screen and (max-width: 400px) {
    .navbar a {
        float: none;
        width: 100%;
    }
    .sidea {
        display: none;
    }
    .sideb {
        display: none;
    }
    .large_image {
        display: none;
    }
}

@media screen and (min-width: 400px) {
    .small_image {
        display: none;
    }
}

@media screen and (max-width: 800px) {
    .row {
        display: inline;
    }
}

.label-green {
    background-color: #009c7b;
}

.label {
    padding-top: 0;
    padding-bottom: 0;
    font-size: 12px !important;
    display: inline-block;
    padding-right: 0.56em;
    padding-left: 0.56em;
    margin-right: .5rem;
    margin-left: .5rem;
    color: #fff;
    text-transform: uppercase;
    vertical-align: middle;
    font-size: 18px !important;
    border-radius: 12px;
}

